--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "deploy": "next build && next export && gh-pages -d out"
+  "dev": "next dev",
+  "build": "next build && next export",
+  "start": "next start",
+  "deploy": "npm run build && git add out && git commit -m \"deploy\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "next": "15.5.4",
